<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<RelativeLayout
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.peaceb.getfreebook.MainActivity">

    <LinearLayout
        android:id="@+id/settingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/textNotice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notice"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="#ff0000"
            />

        <CheckBox
            android:id="@+id/checkNoti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notify_new_book"
            />
        <CheckBox
            android:id="@+id/checkAutoClaim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto_claim_new_book"
            />
        <TextView
            android:id="@+id/textLoginInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#008800"
            android:gravity="center"
            />

        <CheckBox
            android:id="@+id/checkUseVibrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_vibrate"
            android:layout_marginTop="20dp"
            />
        <CheckBox
            android:id="@+id/checkUseSound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_sound"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/settingLayout"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/packt_homepage"

            />
        <TextView
            android:id="@+id/textLinkHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="https://www.packtpub.com"
            android:textColor="#0000ff"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/packt_freebook"
            android:layout_marginTop="16sp"
            />
        <TextView
            android:id="@+id/textLinkFreeBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="https://www.packtpub.com/packt/offers/free-learning"
            android:textColor="#0000ff"
            />
    </LinearLayout>
</RelativeLayout>
</ScrollView>